objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Cust__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Emp_id__c</fullName>
        <displayFormat>EMP{0000}</displayFormat>
        <label>Emp_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>